--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 <body>
     <header id="titulo">
         <nav>
-            <h1>Blog de Lola</h1>
+            <h1>Blog de Lola<img src="img/icono-bulldog-frances-.png" alt="icono-bulldog-frances"></h1>
         </nav>
     </header>
     
