Actualizando reponse @media

--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
     <footer>
         <section>
             <a href="#titulo">Ir al inicio</a>
-            <a href="mailto:andreshernandez0317@gmail.com">lolafrenchie@bulldogFrances.bf</a>
+            <a href="mailto:andreshernandez0317@gmail.com">lolafrenchie@bulldogfrances.bf</a>
         </section>
         <p>Copyright 2025.</p>
     </footer>
